--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,17 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:27.0.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    //国家选择
+    implementation 'com.github.mukeshsolanki:country-picker-android:+'
+    //图片加载
+    implementation 'com.github.bumptech.glide:glide:+'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
