完成添加描述功能，开始登录界面绘制

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <activity android:name=".activity.UploadCelebrityActivity"/>
         <activity android:name=".activity.EditEventsActivity"
             android:windowSoftInputMode="adjustResize|stateHidden"/>
+        <activity android:name=".activity.EditDescriptionActivity"
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
+        <activity android:name=".activity.LoginActivity" />
     </application>
 
 </manifest>
