--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.UploadCelebrityActivity"/>
+        <activity android:name=".activity.UploadCelebrityActivity"
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity android:name=".activity.EditEventsActivity"
             android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity android:name=".activity.EditDescriptionActivity"
