--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
             android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity android:name=".activity.EditDescriptionActivity"
             android:windowSoftInputMode="adjustResize|stateHidden"/>
-        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.LoginActivity"
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
+        <activity android:name=".activity.MyCreationActivity"/>
     </application>
 
 </manifest>
