--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity android:name=".activity.MyCreationActivity"/>
         <activity android:name=".activity.DraftBoxActivity"/>
+        <activity android:name=".activity.PeopleActivity"/>
     </application>
 
 </manifest>
