开始评论功能的编码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".activity.MyCreationActivity"/>
         <activity android:name=".activity.DraftBoxActivity"/>
         <activity android:name=".activity.PeopleActivity"/>
+        <activity android:name=".activity.CommentActivity"/>
     </application>
 
 </manifest>
