--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
     //国家选择
-    implementation 'com.github.mukeshsolanki:country-picker-android:+'
+    implementation 'com.github.mukeshsolanki:country-picker-android:1.2.2'
     //图片加载
     implementation 'com.github.bumptech.glide:glide:+'
     //butterKnife事件注入框架
